--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -1,9 +1,9 @@
-name: Deploy to InfinityFree
+name: Deploy React App to InfinityFree
 
 on:
   push:
     branches:
-      - main  # Change this to your repository's main branch name
+      - main
 
 jobs:
   deploy:
@@ -13,15 +13,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build React app
+        run: npm run build
+
       - name: Deploy to InfinityFree
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /htdocs  # Change this to the appropriate directory
-
-env:
-  FTP_SERVER: ftpupload.net
-  FTP_USERNAME: if0_34870853
-  FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}  # Create a repository secret for your FTP password
+          server-dir: /htdocs
