--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -30,4 +30,4 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /htdocs/
+          server-dir: /sekul.rf.gd/htdocs
