--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: '12'
 
       - name: Install dependencies
         run: npm install
@@ -30,4 +30,4 @@ jobs:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /sekul.rf.gd/htdocs
+          server-dir: /sekul.rf.gd/htdocs/
