--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -24,10 +24,15 @@ jobs:
       - name: Build React app
         run: npm run build
 
+      - name: Set up SSH
+        uses: webfactory/ssh-agent@v0.5.3
+        with:
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+
       - name: Deploy to InfinityFree
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /snasu.rf.gd/htdocs/
+          server-dir: /nasu.rf.gd/htdocs/
