--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -1,3 +1,5 @@
+
+
 name: Deploy React App to InfinityFree
 
 on:
@@ -22,7 +24,7 @@ jobs:
         run: npm install
 
       - name: Build React app
-        run: npm run build-
+        run: npm run build
 
       - name: Deploy to InfinityFree
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
